<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/stall_Name"
        android:text="Stall Name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#000000"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="100sp"
        android:layout_marginBottom="100sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:onClick="manageMenu"
                android:id="@+id/manage_menu"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:text="@string/m_menu" />
            <Button
                android:onClick="currentOrders"
                android:id="@+id/current_orders"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:text="@string/c_orders" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:onClick="transactionHistory"
                android:id="@+id/transaction_history"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:text="@string/t_hist" />

            <Button
                android:onClick="owner_settings"
                android:id="@+id/settings"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:text="Settings" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:text="LOG OUT"
        android:background="#FF0000"
        android:layout_marginBottom="10sp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>